--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -303,4 +303,157 @@ main {
   }
 }
 
+// Code Axel : Notifications, profile/parametre, locaux
+
+.notification {
+  &__hours {
+    font-size: em(14);
+    font-weight: bold;
+    position: absolute;
+    right: 1em;
+    top: 1em;
+  }
+  &__teacher {
+    font-size: em(16);
+    font-weight: 400;
+    margin: 0 0 2em 0;
+  }
+  &__categorie {
+    font-size: em(18);
+    margin: 0 0 .33333334em 0;
+  }
+}
+
+.locaux {
+  width: 75%;
+  margin: 0 auto;
+  display: block;
+
+  &__title {
+    font-size: em(18);
+  }
+
+  &__niveau{
+    font-size: em(18);
+    font-weight: 400;
+  }
+}
+
+.parameter {
+  padding: 1.5em;
+  @media screen and (max-width: 630px) {
+      padding: 0.75em;
+      font-size: 0.75em;
+    }
+  &__img{
+    width: em(150);
+    height: em(150);
+    border-radius: 100%;
+    float: left;
+    @media screen and (max-width: 630px) {
+      width: em(120);
+      height: em(120);
+    }
+  }
+  &__info{
+    margin-left: em(200);
+    margin-top: em(-15);
+    margin-bottom: em(40);
+    @media screen and (max-width: 630px) {
+      font-size: 0.9em;
+      margin-left: em(150);
+    }
+    &__last{
+      margin-top: em(20);
+    }
+    &__name{
+      margin-bottom: em(10);
+      font-size: em(24);
+    }
+  }
+  &__title{
+    text-transform: uppercase;
+  }
+  &__switch{
+    margin-top: em(50);
+    & li{
+      margin-bottom: em(25);
+    }
+    &__text{
+      margin-left: em(20);
+      position: relative;
+      bottom: em(10);
+    }
+  }
+  
+  & hr{
+    opacity: .3;
+    margin-bottom: em(50);
+  }
+}
+
+
+//switch
+
+.switch {
+  position: relative;
+  display: inline-block;
+  width: 60px;
+  height: 34px;
+}
+
+/* Hide default HTML checkbox */
+.switch input {display:none;}
+
+/* The slider */
+.slider {
+  position: absolute;
+  cursor: pointer;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: #ccc;
+  -webkit-transition: .4s;
+  transition: .4s;
+}
+
+.slider:before {
+  position: absolute;
+  content: "";
+  height: 26px;
+  width: 26px;
+  left: 4px;
+  bottom: 4px;
+  background-color: white;
+  -webkit-transition: .4s;
+  transition: .4s;
+}
+
+input:checked + .slider {
+  background-color: #2196F3;
+}
+
+input:focus + .slider {
+  box-shadow: 0 0 1px #2196F3;
+}
+
+input:checked + .slider:before {
+  -webkit-transform: translateX(26px);
+  -ms-transform: translateX(26px);
+  transform: translateX(26px);
+}
+
+/* Rounded sliders */
+.slider.round {
+  border-radius: 34px;
+}
+
+.slider.round:before {
+  border-radius: 50%;
+}
+
+
+// Fin du code d'axel
+
 @import '_choice';
